--- a/story/index.html
+++ b/story/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=devise-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="../styles/style.css">
   <title>nabokov project</title>
 
 
@@ -60,8 +60,10 @@
     <p class="text">В вагоне люди сидели нахохлясь, сонно покачиваясь. Черные стекла были в мелких, частых каплях дождя, будто сплошь подернутое бисером звезд ночное небо. Гремели мы вдоль улицы, обсаженной шумными каштанами, и мне все казалось, что влажные ветви хлещут по окнам. А когда трамвай останавливался, то слышно было, как стукались наверху об крышу срываемые ветром каштаны: ток — и опять, упруго и нежно: ток… ток… Трамвай трезвонил и трогался, и в мокрых стеклах дробился блеск фонарей, и я ждал с чувством пронзительного счастия повторения тех высоких и кротких звуков. Удар тормоза, остановка,— и снова одиноко падал круглый каштан,— погодя падал и второй, стукаясь и катясь по крыше: ток… ток…</p>
   </section>
 
+  <h2>// КОНЕЦ //</h2>
+
   <section class="postcard"></section>
-  <p class="note Vertical B">*БЛАГОСТЬ — БЛАГО, МИЛОСТЬ, МИЛОСЕРДИЕ; ДОБРОТА, КРОТКОСТЬ / ДОБРОДЕЕЛЬ, ОДИН ИЗ ДЕВЯТИ ПЛОДОВ СВЯТОГО ДУХА</p>
+  <p class="note Vertical B">*БЛАГОСТЬ — БЛАГО, МИЛОСТЬ, МИЛОСЕРДИЕ; ДОБРОТА, КРОТКОСТЬ / ДОБРОДЕТЕЛЬ, ОДИН ИЗ ДЕВЯТИ ПЛОДОВ СВЯТОГО ДУХА</p>
   <p class="note Vertical W">*БРАНДЕНБУРГСКИЕ ВОРОТА (НЕМ. BRANDENBURGER TOR) — АРХИТЕКТУРНЫЙ ПАМЯТНИК В БЕРЛИНЕ; ВОЗВЕДЕНЫ В 1788—1791 ГОДАХ.</p>
 
 
